completed sidenav logic (TODO: align nodes correctly)

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,13 +4,13 @@
 }
 
 .side-menu {
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
 
   color: white;
   font-size: 18px;
   background-color: var(--main-color);
-  flex-basis: 250px;
+  /* flex-basis: 250px; */
 }
 
 .side-menu > *:not(app-profile-bit) {
