--- a/src/app/components/company-explorer/company-explorer.component.css
+++ b/src/app/components/company-explorer/company-explorer.component.css
@@ -1,3 +1,16 @@
+.mat-tree *,
+.element-adder {
+  background-color: var(--main-color);
+  color: white;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+/* .mat-tree-node {
+  flex-direction: column;
+  align-items: initial;
+} */
+
 .element-adder {
   color: #a3a3a3;
 }
